# bradyajohnston.github.io

./: .Rhistory  .gitignore  .nojekyll  _config.yml  _quarto.yml  _requirements.R  about.html  about.qmd  aboutme.md  cv.md  details.html  details.qmd  index.html  index.qmd  listings.json  molecular-nodes.html  molecular-nodes.qmd  molstar.molj  pyproject.toml  robots.txt  search.json  sitemap.xml  theme.scss
.Rproj.user/D8C868F8/: rmd-outputs
.github/workflows/: publish.yml
.quarto/idx/: about.qmd.json  details.qmd.json  index.qmd.json  molecular-nodes.qmd.json
.quarto/xref/: 210092a3  21749876  30a5ffd9  4f2d2a33  (+3 more)
_layouts/: side-by-side.html
_posts/: 2019-08-16-gfp-as-a-hat.md  2020-04-03-an-cmd.md  2020-04-03-animation-nodes-rendering.md  2020-04-05-animation-nodes-rendering.md  2020-05-06-blender-for-biochemists.md  2020-05-12-analysis_script.md  2020-06-02-testing-twitter-embeds  2020-06-02-testing-twitter-embeds.md  2020-06-03-posting-with-rmarkdown.md  2020-06-05-testing-rshiny.md  2020-06-09-praise-for-pdb-tools.md  2020-06-18-Visualising-a-Virus.md  2020-07-01-Test-HTML-houtput.md  2020-07-07-r-for-biologists.md  2020-08-25-embedding-pdbs.md  2021-02-01-tidy-tuesday.md  2021-02-15-r3dmol.md
css/: main.css
docs/: about.html  details.html  index.html  listings.json  molecular-nodes.html  robots.txt  search.json  sitemap.xml
html_posts/: Untitled.html  demor3dmol.Rmd  demor3dmol.html  html_test.html  metad_Reports.html  nobias_plotting_20200706.html  redo_analysis.html  restart_protein_metad.html  rna_protein_metad.html
talks/: index.html  index.qmd
(+105 files in other folders)
