[project]
name = "website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "bpy>=4.5.3",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "molecularnodes>=4.5.1",
    "pyyaml>=6.0.2",
    "quarto-cli>=1.8.24",
]
